src/components/Portfolio/portfolio.css
html {
  background-color: var(--background);
}

#root {
  --primary: #18416b;
  --headline-dark: #18416b;
  --soft: #7caee1;
  --normal: #3985d2;
  --normal-text: #393939;
  --light-green: #acbca4;
  --light-red: #d4a4ac;
  --background: #f4f7fa;
  --dk-background: #333;
  --divider: #d1d5db;
  --detail: #e31b6d;

  font-family: Raleway, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color: var(--normal-text);
  background-color: var(--background);

  text-align: center;
  --padding: 1em;
  --padding-inline: 1em;
  --padding-block: 0.5em;
  /* padding: var(--padding); */
  inline-size: 100vw;
  block-size: 100vh;

  --header-footer-block-size: 4%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: Roboto, serif;
  font-weight: 500;
  text-align: left;
  margin: 0;
}

.portfolio-container {
  position: relative;
  display: flex;
  flex-direction: column;
  block-size: 100%;
  inline-size: 100%;

  /* align-items: center; */
}

.body-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  /* padding: var(--padding); */
  inline-size: calc(100% - calc(var(--padding) * 0));
  block-size: calc(
    100% - calc(var(--padding) * 2) - calc(var(--header-footer-block-size) * 2)
  );

  /* block-size: calc(100% ); */
  background-color: var(--background);
  /* overflow-y: auto; */
}

div.content-container {
  display: flex;
  inline-size: 100%;
  block-size: 95%;
}
section {
  display: flex;
  flex-direction: column;
  align-items: center;
  block-size: calc(100vh - 2em);
  inline-size: calc(100% - 2em);
  padding: 1em;
}

div.fullpage-wrapper {
  inline-size: 100%;
}

div#fp-nav.fp-right {
  right: 0px;
  top: 100%;
  transform: translateY(-100%);
}

div#fp-nav.fp-right.hidden {
  animation: fadeOut 1s forwards;
}
/* width */
::-webkit-scrollbar {
  width: 0.65em;
}

/* Track */
::-webkit-scrollbar-track {
  background: var(--background);
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--primary);
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: var(--soft);
}

